# slack-drafter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
src/: config.py  main.py
src/reply_suggester/: prompt_builder.py  suggester.py  tone_utils.py
src/slack/: slack_constants.py  slack_handlers.py  slack_utils.py
tests/: slack_tests.py  slack_utils_tests.py  suggester_tests.py
