[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
exclude = [".venv"]
ignore = ["E501"]
line-length = 88
select = ["E", "F", "I", "UP"]
target-version = "py311"
